# RODict

./: README.md  pyproject.toml
src/rodict/: __init__.py  types.py
tests/: test_rodict.py
