[project]
name = "rodict"
version = "0.1.0"
description = "Type-safe read-only dictionary utilities for Python"
authors = [
    {name = "Aaron Steers"}
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-rich>=0.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
    "basedpyright>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rodict --cov-report=term-missing --rich"
